[package]
name = "pico-rs"
version = "0.1.0"
authors = ["Vince <vince@openanswers.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

valico = "3"
serde_json = "1"
jsonpath_lib = "*"
log = "0.4.8"
env_logger = "0.7.1"
tinytemplate = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
regex = "1"
serde_regex="0"
