[package]
name = "pico-lang"
version = "0.0.3"
authors = ["Vince <c0d3x42@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "JSON Logic like language"
homepage = "https://github.com/c0d3x42/pico-rs"
repository = "https://github.com/c0d3x42/pico-rs"
readme = "README.md"

[features]
default = []
srv_nats = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "picolang"
path = "src/lib.rs"

[dependencies]
tokio = {version= "0.2", features = ["macros", "sync"]}
warp ="0.2.4"
futures = {version="0.3", default-features=false}
serde = { version = "1.0", features = ["derive", "rc"] }
clap = "3.0.0-beta.1"
thiserror = "1"
anyhow = "1"
serde_json = "1"
serde_derive = "1"
jsonpath_lib = "0.2"
log = "0.4.8"
env_logger = "0.7.1"
tinytemplate = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
regex = "1"
serde_regex="0"
unicode-segmentation = "1"
itertools = "0"
nats = "0.7"
