[package]
name = "picolang-applications"
version = "0.0.1"
edition = "2018"
publish = false


[dependencies]
picolang = { path = "../picolang", package = "pico-lang" }
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0"
tokio = {version= "0.2", features = ["macros", "sync"]}
anyhow = "1"
env_logger = "*"
clap = "3.0.0-beta.1"
warp = "*"
actix-web = "3"
futures-core = "0"
futures-util = "0"

[[bin]]
name = "server"
path = "server/main.rs"

[[bin]]
name = "server-warp"
path = "warped/main.rs"

[[bin]]
name = "server-actix"
path = "actix/main.rs"